--- a/poetry.html
+++ b/poetry.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<title>Poetry | David's Site</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image\x-icon" href="images/cube.ico">
+        <title>Poetry | David's Site</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image\x-icon" href="images/cube.ico">
 </head>
 
 <body>
@@ -31,65 +31,65 @@ Along the path
 <br>
 <h2 class="title">The Enemy</h2>
 <p>
-From his homeland he marched; 
+From his homeland he marched;
 <br>Proud son, fearless warrior.
 <br>For his nation he fought;
 <br>Through the mud and rubble he trod,
-<br>spilling blood, taking lives. 
+<br>spilling blood, taking lives.
 <br>A righteous mission for the greater good.
 <br>In his own heart he marched for the love of his nation.
 <br>But in my eyes he marched for hate.
 <br>So I killed him. And as my gunshots rang out
 <br>and he fell before me,
 <br>with a dark pool swelling beneath him, I was proud.
-<br>I was the hero! 
+<br>I was the hero!
 <br>Defender of Peace, Soldier of Justice,
-<br>proud son, fearless warrior. 
+<br>proud son, fearless warrior.
 <br>Because those like him, the soldiers of hate,
-<br>they must die!  
+<br>they must die!
 <br>Mustn't they?
-<br>For it is, of course, my righteous mission. 
+<br>For it is, of course, my righteous mission.
 </p>
 
 <br>
 <h2 class="title">The Pilgrim</h2>
 <p>
 Clad in cloak and bearing mighty blade,
-<br>The Pilgrim treads the wild woods. 
+<br>The Pilgrim treads the wild woods.
 <br>The churning clouds above
 <br>bring a tempest against an emerald sea,
-<br>And below, the shadows come alive. 
+<br>And below, the shadows come alive.
 <br>From the branches, water drips
 <br>Into pools where dark things crawl.
 <br>His glass eye spies twisted metal among the roots,
-<br>Flat rock, up-heaved by Nature and Time. 
+<br>Flat rock, up-heaved by Nature and Time.
 <br>The thistles, with thorns like devil’s claws
 <br>Break upon his iron skin,
 <br>but he is unperturbed.
 <br>
 <br>Now hill he meets, and he ascends,
-<br>His iron grip marring rock, crushing twig and branch. 
-<br>His cloak is tattered, and as the summit is reached 
+<br>His iron grip marring rock, crushing twig and branch.
+<br>His cloak is tattered, and as the summit is reached
 <br>It is torn from him by the storm.
-<br>But the wind parts the clouds of heaven, 
-<br>Flooding the earth with golden honey light. 
-<br>The Pilgrim stands; his bones gleaming in the sun. 
+<br>But the wind parts the clouds of heaven,
+<br>Flooding the earth with golden honey light.
+<br>The Pilgrim stands; his bones gleaming in the sun.
 <br>Ahead in view, is single goal,
-<br>The City of Glass. 
+<br>The City of Glass.
 <br>He descends the ragged land.
 <br>
 <br>As The Pilgrim walks between the towers
-<br>They seem to stretch upwards to infinity. 
-<br>At the base of the tallest spire lies The Shrine. 
-<br>Before it, he kneels, 
-<br>And speaks the holy words. 
-<br>As he mutters, from the shrine stares 
+<br>They seem to stretch upwards to infinity.
+<br>At the base of the tallest spire lies The Shrine.
+<br>Before it, he kneels,
+<br>And speaks the holy words.
+<br>As he mutters, from the shrine stares
 <br>an out-of-place oddity,
 <br>organic, rough, weather-worn.
-<br>A skull, like his, 
+<br>A skull, like his,
 <br>but made of bone, like the creatures of the plains.
 <br>For it is the shine to the Creator.
-The shrine to his GOD called MAN.  
+The shrine to his GOD called MAN.
 </p>
 
 <br>
@@ -112,7 +112,8 @@ Amid the fields of dancing green,
 </div>
 
 <footer>
-	<p><a href="index.html">home</a></p>
+        <p><a href="index.html">home</a></p>
+</footer>
 </body>
 
 </html>
