--- a/short_Stories.html
+++ b/short_Stories.html
@@ -9,9 +9,9 @@
 
 <body>
 
-	<h1>Short Stories</h1>
+        <h1>Short Stories</h1>
 
-	<div class="floating_box">
+        <div class="floating_box">
         <h3><a href="short-stories/Memories.html">Memories</a></h3>
         <p class="indent">Science Fiction, 4 minute read</p>
 
@@ -39,9 +39,9 @@
         <h3><a href="short-stories/May_16th_2004.html">May 16th, 2004</a></h3>
         <p class="indent">Fiction, 2 minute read</p>
 
-	</div class="floating_box">
+        </div>
 
-	<footer><p><a href="index.html">home</a></p></footer>
+        <footer><p><a href="index.html">home</a></p></footer>
 
 </body>
 
