--- a/vimrc.html
+++ b/vimrc.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-	<title>Vimrc | David's Site</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image\x-icon" href="images/cube.ico">
+        <title>Vimrc | David's Site</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image\x-icon" href="images/cube.ico">
 </head>
 
 <body>
 
-	<h1>Vim configuration</h1>
+        <h1>Vim configuration</h1>
 
-	<div class="floating_box">
-		<br>
+        <div class="floating_box">
+                <br>
         <p><a href="vimrc.txt">vimrc.txt</a></p>
-		<code id="copy">
+                <code id="copy">
 set nocompatible " set as not compatible with vi
 set hlsearch " hightlight search pattern matches
 set incsearch " show match for search pattern while typing it
@@ -72,7 +72,9 @@ highlight CursorLineNr ctermfg=black ctermbg=074 cterm=NONE
 
 </code>
 <br>
-	</div class="floating_box">
-	<footer><p><a href="index.html">home</a></p></footer>
+        </div>
+        <footer>
+                <p><a href="index.html">home</a></p>
+        </footer>
 </body>
 </html>
