--- a/bash_aliases.html
+++ b/bash_aliases.html
@@ -24,9 +24,11 @@ alias l='ls -CF'
 alias ..="cd .."
 <br>
 </code>
-        </div class="floating_box">
+        </div>
 
-        <footer><p><a href="index.html">home</a></p></footer>
+        <footer>
+                <p><a href="index.html">home</a></p>
+        </footer>
 
 </body>
 </html>
