--- a/short-stories/Memories.html
+++ b/short-stories/Memories.html
@@ -2,17 +2,17 @@
 <html lang='en'>
 
 <head>
-	<title>Memories | David's Site</title>
-	<link rel="stylesheet" href="../style.css">
-	<link rel="icon" type="image\x-icon" href="../images/cube.ico">
+        <title>Memories | David's Site</title>
+        <link rel="stylesheet" href="../style.css">
+        <link rel="icon" type="image\x-icon" href="../images/cube.ico">
 </head>
 
 <body>
 
 <h1>Memories</h1>
-	
+
 <div class='prose'>
-	<pre>
+        <pre>
     The alarm woke him suddenly, and he flailed in the darkness to silence it. He tore back the sheets and stood up violently, breathing heavily. Something wasn't right. Where was he? He looked over to where the alarm had come from, and saw a familiar-looking smartphone. After peering around though darkness for a few more seconds, the realization came to him.
 
     'What that fuck...?' 
@@ -107,8 +107,8 @@ Simon's mind was a hurricane of memories, thoughts, and emotions. He struggled t
 </div>
 
 <footer>
-	<p><a href='../short_Stories.html'>back</a></p>
-</body>
+        <p><a href='../short_Stories.html'>back</a></p>
+</footer>
 
 </body>
 
