--- a/short-stories/On_Another_Shore.html
+++ b/short-stories/On_Another_Shore.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<title>On Another Shore | David's Site</title>
-	<link rel='stylesheet' href='../style.css'>
-	<link rel="icon" type="image\x-icon" href="../images/cube.ico">
+        <title>On Another Shore | David's Site</title>
+        <link rel='stylesheet' href='../style.css'>
+        <link rel="icon" type="image\x-icon" href="../images/cube.ico">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 I stood up, wincing at the spasms of pain that moved though my body. For a moment I was confused, and through my blurry vision I saw only a great patch of dark and light, and I heard no sound. But quickly the pain passed, and both my senses and mind grew clear. Through the glass of my helmet I saw swath of blue sky over top of the dusty ground on which I stood. At the horizon was a range of mountains, sharp grey teeth capped in white.  I turned around, feeling my heavy boots grind against the dirt, and I beheld a strange sight. There were no trees, grass, and no plants of any kind. No bird flew through the sky, and I saw only rocky hills, devoid of details. I turned around again, looking across the horizon, but saw nothing except shades of stone grey against an endless sky. 
 
 I was utterly confused. At this point in time, there should no doubt be forests here. Or at the very least, grass and other growing things, but here there was none. I thought to myself, had the machine malfunctioned? Had I been send to the wrong point in time? Worried, I took the navigation unit out from the pocket of my suit and turned it on. There was no way to know at which point in time I existed now, but based on the power readout, I had travelled back much further than I expected. To my surprise, however, the waypoint on the display was active and nearby, a few kilometres Southeast. I began to walk in that direction.
-	
+
 I was fairly comfortable inside my suit, and when I checked the environmental readouts, I was thankful for it. Though temperature outside was reasonable, the amount of oxygen in the air was somewhat under the breathable level. I frowned. A strange feeling was growing the back of my mind; Not only did I not know when I was, but I did not think I was supposed to be here. The apparent lack of life was unnerving, and I glanced frequently back over my shoulder, expecting to see something there, yet finding nothing. I activated the voice recorder to make my first of the mission.
 
 'Log One. Time is plus four minutes. There may have been a malfunction during the jump. The power level was over forty thousand, and I don't recognize where or when I am right now. I haven't seen any signs of life, plant or animal. External oxygen level is a bit low at fifteen and a half percent, but the temperature is twenty-three degrees. There are some mountains to the North,  at least fifty kilometres away, maybe more, so I don't think I'm at a high altitude. If I am, I'm on some kind of plateau we didn't anticipate. It's sunny, and seems to be some time after midday. End log one.'
@@ -65,8 +65,8 @@ Once it was fully out of view, I looked back at the structure. It had not moved 
 </div>
 
 <footer>
-	<p><a href='../short_Stories.html'>back</a></p>
-</body>
+        <p><a href='../short_Stories.html'>back</a></p>
+</footer>
 
 </body>
 
