--- a/short-stories/May_16th_2004.html
+++ b/short-stories/May_16th_2004.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<title>May 16th, 2004 | David's Site</title>
-	<link rel='stylesheet' href='../style.css'>
-	<link rel="icon" type="image\x-icon" href="../images/cube.ico">
+        <title>May 16th, 2004 | David's Site</title>
+        <link rel='stylesheet' href='../style.css'>
+        <link rel="icon" type="image\x-icon" href="../images/cube.ico">
 </head>
 
 <body>
@@ -32,8 +32,8 @@ It was an evening. Wisps of clouds in the dimming sky, with an air that was clea
 </div>
 
 <footer>
-	<p><a href='../short_Stories.html'>back</a></p>
-</body>
+        <p><a href='../short_Stories.html'>back</a></p>
+</footer>
 
 </body>
 
