--- a/short-stories/Travelers.html
+++ b/short-stories/Travelers.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<title>Travelers | David's Site</title>
-	<link rel='stylesheet' href='../style.css'>
-	<link rel="icon" type="image\x-icon" href="../images/cube.ico">
+        <title>Travelers | David's Site</title>
+        <link rel='stylesheet' href='../style.css'>
+        <link rel="icon" type="image\x-icon" href="../images/cube.ico">
 </head>
 
 <body>
@@ -26,8 +26,8 @@
 </div>
 
 <footer>
-	<p><a href='../short_Stories.html'>back</a></p>
-</body>
+        <p><a href='../short_Stories.html'>back</a></p>
+</footer>
 
 </body>
 
