change page title

--- a/redshiftconf.html
+++ b/redshiftconf.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-        <title>Vimrc | David's Site</title>
+        <title>Redshift Config | David's Site</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image\x-icon" href="images/cube.ico">
 </head>
