add links to new pages

--- a/short_Stories.html
+++ b/short_Stories.html
@@ -39,6 +39,12 @@
         <h3><a href="short-stories/May_16th_2004.html">May 16th, 2004</a></h3>
         <p class="indent">Fiction, 2 minute read</p>
 
+        <h3><a href="short-stories/Clarity.html">Clarity</a></h3>
+        <p class="indent">Science Fiction, 8 minute read</p>
+
+        <h3><a href="short-stories/Secluded_Geometries.html">Secluded Geometries</a></h3>
+        <p class="indent">Fiction, 4 minute read</p>
+
         </div>
 
         <footer><p><a href="index.html">home</a></p></footer>
