add file for linux notes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="floating_box">
         <h2>Computer Science</h2>
         <h3><a href="https://github.com/davidward462" target="_blank" rel="noopener noreferrer">GitHub</a></h3>
+        <h3><a href="linux-notes.html">Linux Notes</a></h3>
         <h3><a href="vimrc.html">Vim Configuration</a></h3>
         <h3><a href="bash_aliases.html">Bash Aliases</a></h3>
         <h3><a href="redshiftconf.html">Redshift Configuration</a></h3>
