--- a/linux-notes.html
+++ b/linux-notes.html
@@ -17,13 +17,19 @@
 		<h2>Remove repo from Fedora</h2>
                         <p>ls /etc/yum.repos.d/* (show all added repos)</p>
                         <p>sudo rm /etc/yum.repos.d/<file_name>.repo</p>
+                <br>
 		<h2>Fedora System logs</h2>
                         <p> /var/log/messages </p>
+                <br>
 		<h2>Clean dnf5 repositories</h2>
                         <p>sudo dnf5 clean all</p>
                         <p>sudo dnf5 update --refresh</p>
-		<h2>Subheader</h2>
-                        <p>paragraph</p>
+                <br>
+		<h2>Add custom icon to icon list for Fedora XFCE panel</h2>
+                        <p>Download file</p>
+                        <p>Move file to /usr/share/icons/hicolor/scalable/apps/ (needs sudo privilege)</p>
+                        <p>Run sudo gtk-update-icon-cache /usr/share/icons/hicolor</p>
+                <br>
 	</div>
 	
     <footer>
