--- a/linux-notes.html
+++ b/linux-notes.html
@@ -48,7 +48,7 @@ sudo dnf5 update --refresh
 	</div>
 	
     <footer>
-        <p><a href='../index.html'>home</a></p>
+        <p><a href='index.html'>home</a></p>
     </footer>
 </body>
 
