--- a/linux-notes.html
+++ b/linux-notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Linux Notes</title>
+	<title>Linux Notes | David's Site</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image\x-icon" href="../images/cube_2.ico">
 </head>
